Issue #50: Center align Enroll / Resume button on course cards

--- a/src/app/client/src/app/modules/shared/components/card/card.component.css
+++ b/src/app/client/src/app/modules/shared/components/card/card.component.css
@@ -160,3 +160,7 @@
       height: 308px;
     }
   }
+
+  .center-aligned {
+    text-align: center;
+  }
