--- a/src/app/client/src/app/modules/shared/components/page-section/page-section.component.css
+++ b/src/app/client/src/app/modules/shared/components/page-section/page-section.component.css
@@ -137,3 +137,7 @@
     height: 308px;
   }
 }
+
+.center-aligned {
+  text-align: center;
+}
